@@ -24,6 +24,11 @@ NEW FEATURES
  * Issue 300: examples/pmap.py script.
  * Issue 301: process_iter() now yields processes sorted by their PIDs.
  * Issue 302: process number of voluntary and involuntary context switches.
+ * Issue 303: (Windows) the Process methods below were always raising
+   AccessDenied for any process not owned by current user. Now this is no longer
+   true:
+    - get_cpu_times()
+    - get_cpu_percent()
 
 BUGFIXES
 
